chore(front): updates code component hovers; z-indexes; adds post-title light

--- a/front/src/lib/styles/base/colors-dark.css
+++ b/front/src/lib/styles/base/colors-dark.css
@@ -13,6 +13,7 @@
   --celestial: #e3f6ffff;
   --celestial-a90: #e3f6ffe5;
   --celestial-a75: #e3f6ffbf;
+  --celestial-a50: #e3f6ff7f;
   --celestial-a30: #e3f6ff4c;
   --grape: #231151ff;
   --eerie-black: #1a2018ff;
