--- a/front/src/lib/styles/base/colors-light.css
+++ b/front/src/lib/styles/base/colors-light.css
@@ -19,6 +19,7 @@
   --violet: #0b0033ff;
   --violet-a90: #0b0033e5;
   --violet-a75: #0b0033bf;
+  --violet-a50: #0b00337f;
   --violet-a30: #0b00334c;
   --blacktop: #18020cff;
 }
