--- a/front/src/lib/styles/components/Code/Code.css
+++ b/front/src/lib/styles/components/Code/Code.css
@@ -44,6 +44,8 @@
       'Liberation Mono', 'Courier New', monospace; /* 1 */
 
     &.full {
+      top: 1px;
+      right: 1px;
       border-top-right-radius: 0.5rem;
       border-top-left-radius: 0.5rem;
       width: 100%;
@@ -62,10 +64,14 @@
       padding-right: 2.77rem;
     }
   }
+  .title,
+  .language,
+  .code-copy-btn {
+    z-index: 9;
+  }
   .code-copy-btn {
     position: absolute;
     right: 0;
-    z-index: 7;
     transition: color 333ms;
     padding: 0.75rem;
     line-height: 1.6;
