--- a/front/src/lib/styles/base/tw-components.css
+++ b/front/src/lib/styles/base/tw-components.css
@@ -33,35 +33,24 @@
     }
   }
   .dg--photo-vignette-light {
-    box-shadow: 0 0 33px rgba(var(--background-saturated), 0.18) inset;
-    border: 1px solid rgba(var(--foreground-rgb), 0.11);
-    overflow: hidden;
+    box-shadow: inset 0 0 9rem 3rem rgba(var(--black), 0.77);
+  }
+  .dg--photo-link-light {
+    @apply dg--photo-vignette-light;
+    background-color: rgba(var(--black), 0.77);
+    text-shadow: 0px 0px 12px rgba(var(--black), 0.2);
     &:hover,
     &:focus {
-      border-color: rgba(var(--foreground-rgb), 0.01);
+      background: none;
     }
   }
   .dg--photo-vignette-dark {
     transition-property: background, color, text-shadow, border-color,
       box-shadow;
     box-shadow: inset 0 0 9rem 3rem rgba(var(--black), 0.77);
-    border: 1px solid rgba(var(--foreground-rgb-faded), 0.23);
-    overflow: hidden;
     &:hover,
     &:focus {
       box-shadow: inset 0 0 9rem 3rem rgba(var(--black), 0.33);
-      border-color: rgb(var(--background-saturated));
-    }
-  }
-  .dg--photo-link-light {
-    @apply dg--photo-vignette-light;
-    background-color: rgba(var(--white), 0.77);
-    color: rgba(var(--black), 0.8);
-    text-shadow: 0px 0px 12px rgba(var(--black), 0.2);
-    &:hover,
-    &:focus {
-      background: rgba(var(--white), 0.1);
-      color: rgba(var(--black), 1);
     }
   }
   .dg--photo-link-dark {
