--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -48,7 +48,6 @@
     }
     .hero {
       position: absolute;
-      left: -2%;
       opacity: 1;
       z-index: 4;
       transition: opacity, filter;
@@ -60,11 +59,10 @@
       background-size: cover;
       background-repeat: no-repeat;
       padding: initial 0.25rem;
-      width: 104%;
+      width: 100%;
       height: 277px;
       max-height: 100%;
       @screen sm {
-        left: -1%;
         width: 102%;
         height: 400px;
       }
@@ -109,14 +107,19 @@
   h1.post-title {
     z-index: 5;
     margin-bottom: 0;
-    padding: 0 1rem;
-    line-height: 1;
-    @screen sm {
-      line-height: 1.2;
+    padding: 0 0.5rem;
+    line-height: 1.2;
+    @media screen and (min-width: 480px) {
+      padding: 0 1rem;
     }
   }
   .pubdate {
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
     font-size: 1rem;
+    @media screen and (min-width: 480px) {
+      padding: 0;
+    }
   }
   .aside-toggle {
     display: inline;
@@ -145,7 +148,6 @@
       width: 25%;
       h2 {
         font-size: 1.33rem;
-        line-height: 1.33;
       }
     }
   }
@@ -155,11 +157,15 @@
   @apply dg--font-lb;
   text-wrap: pretty;
   margin: 0;
-  padding: 1.5rem 1rem 0.5rem 1rem;
+  padding: 1.5rem 1rem;
   font-size: 1.2rem;
   font-size: 1rem;
   text-indent: 0;
-  @screen md {
+  @media screen and (min-width: 480px) {
+    padding-right: 1.75rem;
+    padding-left: 1.75rem;
+  }
+  @media screen and (min-width: 640px) {
     padding: 1.75rem 0.75rem;
     font-size: 1.2rem;
   }
@@ -196,17 +202,22 @@
   top: -1rem;
   float: none;
   margin-bottom: 0;
-  padding-right: 1rem;
-  padding-left: 1rem;
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
   width: 100%;
-  @screen sm {
-    float: left;
+  @media screen and (min-width: 333px) {
     margin-bottom: -0.5rem;
-    padding-right: 1.5rem;
-    width: 75%;
   }
-  @screen md {
+  @media screen and (min-width: 480px) {
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
+  @media screen and (min-width: 640px) {
+    float: left;
     margin-bottom: -6rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    width: 75%;
   }
   a {
     transition-duration: var(--transition-duration);
@@ -219,7 +230,8 @@
       @apply dg--font-lb;
       display: inline;
       position: absolute;
-      left: -1.5rem;
+      right: 0;
+      left: auto;
       opacity: 0;
       transition:
         opacity 500ms ease-in-out,
@@ -227,6 +239,9 @@
       border: none;
       padding: 0 0.5rem;
       font-size: 1rem;
+      @media screen and (min-width: 480px) {
+        left: -1.5rem;
+      }
       @screen md {
         left: -2.5rem;
         vertical-align: middle;
