--- a/front/src/lib/styles/base/colors-dark.css
+++ b/front/src/lib/styles/base/colors-dark.css
@@ -17,6 +17,7 @@
   --celestial-a30: #e3f6ff4c;
   --grape: #231151ff;
   --eerie-black: #1a2018ff;
+  --oxford-blue-a50: #0e0f247f;
   --oxford-blue: #0e0f24ff;
   --rich-black: #0f0f1cff;
   --rich-black-a30: #0f0f1c4c;
