--- a/front/src/lib/styles/base/tw-components.css
+++ b/front/src/lib/styles/base/tw-components.css
@@ -32,35 +32,30 @@
         brightness-125;
     }
   }
-  .dg--photo-vignette-light {
-    box-shadow: inset 0 0 9rem 3rem rgba(var(--black), 0.77);
-  }
   .dg--photo-link-light {
-    @apply dg--photo-vignette-light;
-    background-color: rgba(var(--black), 0.77);
-    text-shadow: 0px 0px 12px rgba(var(--black), 0.2);
-    &:hover,
-    &:focus {
-      background: none;
-    }
-  }
-  .dg--photo-vignette-dark {
+    transition-duration: var(--transition-duration);
     transition-property: background, color, text-shadow, border-color,
       box-shadow;
+    transition-timing-function: var(--transition-timing-function);
     box-shadow: inset 0 0 9rem 3rem rgba(var(--black), 0.77);
+    background-color: rgba(var(--black), 0.77);
     &:hover,
     &:focus {
       box-shadow: inset 0 0 9rem 3rem rgba(var(--black), 0.33);
+      background-color: rgba(var(--black), 0);
     }
   }
   .dg--photo-link-dark {
-    @apply dg--photo-vignette-dark;
+    transition-duration: var(--transition-duration);
+    transition-property: background, color, text-shadow, border-color,
+      box-shadow;
+    transition-timing-function: var(--transition-timing-function);
+    box-shadow: inset 0 0 9rem 3rem rgba(var(--black), 0.77);
     background: rgba(var(--black), 0.77);
-    color: rgba(var(--white), 0.88);
     &:hover,
     &:focus {
-      background: rgba(var(--white), 0.03);
-      color: rgb(var(--white));
+      box-shadow: none;
+      background-color: rgba(var(--white), 0);
     }
   }
 }
