fix(front): refactors mobile view to account for page transitions

--- a/front/src/lib/styles/base/layout.css
+++ b/front/src/lib/styles/base/layout.css
@@ -6,18 +6,10 @@
   justify-content: center;
   align-items: center;
   justify-items: center;
-  padding-right: 1rem /* 16px */;
-  padding-left: 1rem /* 16px */;
+  padding-right: 0;
+  padding-left: 0;
   width: 100%;
   max-width: 64rem /* 1024px */;
-  &.l-post {
-    padding-right: 0;
-    padding-left: 0;
-    @media screen and (min-width: 480px) {
-      padding-right: 0.75rem /* 12px */;
-      padding-left: 0.75rem /* 12px */;
-    }
-  }
   @media screen and (min-width: 333px) {
     padding-top: 1.25rem /* 20px */;
   }
@@ -61,6 +53,12 @@ body.ready .header.scroll-transition {
     opacity-95
     transition-colors
     sm:max-w-5xl;
+}
+
+.posts,
+.category {
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
 
 .post,
