--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -86,16 +86,11 @@ html {
 }
 
 body {
-  @apply dg--font-psxl
-    flex
-    flex-col
-    items-center
-    text-base
-    md:text-lg;
+  display: flex;
   position: relative;
+  flex-direction: column;
+  align-items: center;
   transition: scrollbar-color 1s;
-  padding-right: 7px;
-  padding-left: 7px;
   height: 100vh;
   min-height: 100vh;
   overflow: overlay;
@@ -103,8 +98,17 @@ body {
   scrollbar-gutter: stable both-edges;
   scrollbar-width: thin;
   color: var(--fg-clr);
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-family: var(--font-psxl);
+  @media screen and (min-width: 480px) {
+    padding-right: 7px;
+    padding-left: 7px;
+  }
   @media screen and (min-width: 640px) {
     scrollbar-gutter: stable;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
   @media (hover: none),
     (hover: on-demand),
