fix(front): adds  styles and html for post hero image fallback

--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -98,6 +98,9 @@
       &.loaded {
         z-index: 18;
       }
+      noscript .noscript {
+        display: none;
+      }
     }
   }
   h1.post-title,
