--- a/front/static/styles/noscript.css
+++ b/front/static/styles/noscript.css
@@ -22,3 +22,9 @@ body .footer {
     display: none;
   }
 }
+.post .hero-wrap .hero.hero-thumbnail {
+  display: none;
+}
+.post .hero-wrap noscript .hero.noscript {
+  display: block;
+}
