fix(front): removes padding on header

--- a/front/src/lib/styles/base/layout.css
+++ b/front/src/lib/styles/base/layout.css
@@ -37,6 +37,7 @@
   display: flex;
   position: relative;
   align-items: center;
+  padding-bottom: 0;
   @screen sm {
     padding-top: 2rem;
     padding-bottom: 0.75rem;
